--- a/manga_web/templates/manga/volume.html
+++ b/manga_web/templates/manga/volume.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% load widget_tweaks %} {% block title %}Yêu cầu
-{{volume.manga.name}} - Tập {{volume.number}}{% endblock %} {% block body %}
+{{volume.manga.unicode_name}} - Tập {{volume.number}}{% endblock %} {% block body %}
 <section class="section">
   <div class="container">
-    <h1 class="title">Yêu cầu {{volume.manga.name}} - Tập {{volume.number}}</h1>
+    <h1 class="title">Yêu cầu {{volume.manga.unicode_name}} - Tập {{volume.number}}</h1>
     <div class="content">
       <p><em>Tập truyện bạn mong muốn chưa có bản cho Kindle?</em></p>
       <p>
@@ -25,7 +25,7 @@
     </div>
     <div class="columns">
       <div class="column is-8">
-        <form hx-post="{% url 'manga:volume' pk=volume.pk %}" class="control" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+        <form method="post" hx-post="{% url 'manga:volume' pk=volume.pk %}" class="control" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
           <div class="field">{% render_field form.captcha %}</div>
 
           <div class="field">
