--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -10,7 +10,7 @@
     <div id="manga" class="columns is-multiline">
     {% for manga in mangas %}
       <div class="column is-2 is-10-mobile is-offset-1-mobile">
-          <div class="box-ribbon" style="background-color: {{manga.source_color}};">
+          <div class="box-ribbon">
             <span class="image is-2by3">
               <a href="{% url "manga:detail" slug=manga.slug %}"
               hx-get="{% url "manga:detail" slug=manga.slug %}" hx-trigger="click" hx-target="#body" hx-swap="innerhtml" hx-push-url="true"
@@ -19,7 +19,7 @@
               </a>
             </span>
             <div class="ribbon ribbon-top-right">
-              <span>{{ manga.web_source }}</span>
+              <span style="background-color: {{manga.source_color}};">{{ manga.web_source }}</span>
             </div>
           </div>
           <article class="media" style="margin-top: 10px;">
