--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -33,6 +33,8 @@
             <div class="media-content">
               <div class="content">
                 <p class="title is-3">{{manga.unicode_name}}</p>
+                <p class="subtitle is-6">{{manga.total_chap}} chapters</p>
+                <p class="subtitle is-6">ID: {{manga.id}}</p>
                 <a href="{{ manga.source }}" class="button is-warning" rel="nofollow" target="_blank">
                   <span class="icon">
                     <i class="fas fa-box-open"></i>
