--- a/manga_web/templates/manga/volume.html
+++ b/manga_web/templates/manga/volume.html
@@ -30,7 +30,7 @@
 
           <div class="field">
             <div class="control">
-              <button class="button is-primary is-outlined" type="submit">
+              <button {% if volume.converting %}disabled{% endif %} class="button is-primary is-outlined" type="submit">
                 Submit
               </button>
             </div>
