--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -5,7 +5,7 @@
     <div class="container has-text-centered">
       <h1 class="title">Kindle Manga</h1>
       <h2 class="subtitle">Tìm kiếm và tải Manga yêu thích của bạn về Kindle</h2>
-      <form action="{% url "manga:search" %}" class="control">
+      <form method='get' hx-get="{% url "manga:search" %}" hx-params="*" class="control" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-push-url="true">
         <div class="columns">
           <div id="app" class="column is-10-mobile is-offset-1-mobile is-8-desktop is-offset-2-desktop">
             <div class="field">
@@ -18,6 +18,7 @@
                   hx-indicator=".is-loading"
                   autocomplete="off" 
                   class="input is-primary" 
+                  hx-push-url="false"
                   >
                 <div id="search-results">
                 </div>
