add recaptcha for contact

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -12,6 +12,12 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
 
+    <meta name="google-site-verification" content="VmB77WCg22eY7jvwBB2V4QzfSvkfimcatgukxvddGmc" />
+    <noscript>
+        <img src="https://analytic.doanhtu.com/ingress/fbb54d4c-5580-49c1-a135-c90263b92a9e/pixel.gif">
+    </noscript>
+    <script defer src="https://analytic.doanhtu.com/ingress/fbb54d4c-5580-49c1-a135-c90263b92a9e/script.js"></script>
+
 
     <!-- Open Graph data -->
     <meta property="og:title" content="{% block meta_title %}{% endblock %}" />
