--- a/manga_web/templates/django_contact_form/contact_form.html
+++ b/manga_web/templates/django_contact_form/contact_form.html
@@ -8,6 +8,7 @@
       <div class="column is-10">
         <form method="post" class="control">
           {% csrf_token %}
+          <div class="field">{% render_field form.captcha %}</div>
           {% for hidden_field in form.hidden_fields %}
             {{ hidden_field }}
           {% endfor %}
