--- a/manga_web/templates/django_contact_form/contact_form_sent.html
+++ b/manga_web/templates/django_contact_form/contact_form_sent.html
@@ -6,7 +6,7 @@
     <div class="columns">
       <div class="column is-6 is-offset-3 has-text-centered">
         <figure class="image" style="padding-top: 40px;">
-            <img src="https://imgur.com/5dqcrV9.jpg" alt="Signup Anchoi.today">
+            <img src="https://imgur.com/5dqcrV9.jpg" alt="">
         </figure>
         <small>Art source: <a href='https://dribbble.com/prakhar' rel='nofollow'>Prakhar Neel Sharma</a></small>
       </div>
