--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta charset="utf-8">
     <title>{% block title %}Kindle Manga{% endblock %} | Kindle Manga</title>
-    <link rel="stylesheet" href="{% static "css/app.css" %}">
+    <link rel="stylesheet" href="{% static "css/bulma.css" %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
@@ -18,6 +18,7 @@
     </noscript>
     <script defer src="https://analytic.doanhtu.com/ingress/fbb54d4c-5580-49c1-a135-c90263b92a9e/script.js"></script>
 
+    <meta name="referrer" content="origin" />
 
     <!-- Open Graph data -->
     <meta property="og:title" content="{% block meta_title %}{% endblock %}" />
