--- a/manga_web/templates/manga/recent.html
+++ b/manga_web/templates/manga/recent.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
         <div class="section">
-          <div class="columns has-text-centered">
+          <div class="columns">
             <div class="column is-10-mobile is-offset-1-mobile is-4-desktop is-offset-2-desktop">
-              <h1 class="title is-3">Recent converted</h1>
+              <h1 class="title has-text-centered is-3">Recent converted</h1>
               <table class="table is-fullwidth">
                 <thead>
                   <tr>
@@ -18,7 +18,15 @@
                   {% for vol in volumes %}
                   <tr>
                     <td><img {% if vol.manga.thumbnail %} src="{{ vol.manga.thumbnail.url }}" {% else %} src="{{ vol.manga.image_src }}" {% endif %} alt="{{ vol.manga.unicode_name }}" width="100"></td>
-                    <td>{{ vol.manga.unicode_name }}</td>
+                    <td>
+                      <a href="{% url 'manga:detail' slug=vol.manga.slug %}"
+                      hx-get="{% url "manga:detail" slug=vol.manga.slug %}" hx-trigger="click" hx-target="#body" hx-swap="innerhtml" hx-push-url="true"
+                      > {{ vol.manga.unicode_name }}</a>
+                      <br>
+                      <p>
+                        {{ vol.manga.description|truncatechars:90 }}
+                      </p>
+                    </td>
                     <td>{{ vol.number }}</td>
                     <td><a href="{{ vol.file.url }}" class="button is-primary">Download</a></td>
                     <td>{{ vol.modified | date:"d/m/Y" }}</td>
@@ -26,7 +34,37 @@
                   {% endfor %}
                 </tbody>
               </table>
-              {% include "manga/paginate.html"%}
+            </div>
+            <div class="column is-10-mobile is-offset-1-mobile is-4-desktop">
+              <h1 class="title has-text-centered is-3">Random Manga</h1>
+              <table class="table is-fullwidth">
+                <thead>
+                  <tr>
+                    <th>Cover</th>
+                    <th>Name</th>
+                    <th>Source</th>
+                    <th>Chapters</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for manga in mangas %}
+                  <tr>
+                    <td><img {% if manga.thumbnail %} src="{{ manga.thumbnail.url }}" {% else %} src="{{ manga.image_src }}" {% endif %} alt="{{ manga.unicode_name }}" width="100"></td>
+                    <td>
+                      <a href="{% url 'manga:detail' slug=manga.slug %}"
+                      hx-get="{% url "manga:detail" slug=manga.slug %}" hx-trigger="click" hx-target="#body" hx-swap="innerhtml" hx-push-url="true"
+                      > {{ manga.unicode_name }}</a>
+                      <br>
+                      <p>
+                        {{ manga.description|truncatechars:90 }}
+                      </p>
+                    </td>
+                    <td>{{ manga.web_source }}</td>
+                    <td>{{manga.total_chap}}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
