--- a/manga_web/templates/manga/search_result.html
+++ b/manga_web/templates/manga/search_result.html
@@ -2,8 +2,8 @@
 {% block title %}Tìm kiếm cho từ khóa "{{query}}"{% endblock %}
 {% block body %}
 <section class="section">
-  <div class="container has-text-centered">
-    <h1 class="title is-3">
+  <div class="container">
+    <h1 class="title has-text-centered is-3">
       <span class="icon is-left has-text-primary"><i class="fas fa-book"></i></span> <span>Kết quả tìm kiếm cho từ khóa: <strong><em>{{query}}</em></strong></span>
     </h1>
     <hr>
