--- a/manga_web/templates/manga/faq.html
+++ b/manga_web/templates/manga/faq.html
@@ -11,7 +11,7 @@
         <div class="content">
           <ul>
             <li>
-              Một vol(tập) có bao nhiêu chap(chương)?
+              Một vol(tập) có bao nhiêu chap(chương)? / How many chapters in a volume?
               <article class="message is-success">
                 <div class="message-body">
                   <p>
@@ -23,6 +23,14 @@
                     >
                     thì mình đã chia mỗi volume gồm 12 chapter. Còn lẻ bao nhiêu
                     chap thì sẽ cho vào vol cuối. (Update: giảm còn 10 chap)
+                    <br>
+                    As you can see in this 
+                    <a
+                      href="https://www.reddit.com/r/manga/comments/2iq8vz/is_there_a_set_amount_of_chapters_per_volume/"
+                      target="_blank"
+                      >thread</a
+                    >
+                    I will pack 10 chapters per volume.
                   </p>
                 </div>
               </article>
@@ -30,6 +38,7 @@
             <li>
               Bạn không tìm thấy truyện của mình? Vui lòng để lại link truyện ở
               đây:
+              Can't find your favorite manga? Request here:
               <article class="message is-success">
                 <div class="message-body">
                   <iframe
@@ -45,24 +54,24 @@
               </article>
             </li>
             <li>
-              Bạn không thấy email thông báo sau 20 phút?
+              Không sang trang được? Can not open next page?
               <article class="message is-success">
                 <div class="message-body">
-                  Bạn vui lòng vào lại trang truyện bạn vừa yêu cầu hoặc kiểm
-                  tra ở mục spam của email. <br />
-                  Nếu vẫn chưa thấy truyện trên trang web, bạn vui lòng feedback
-                  lại cho chúng tôi ở đây:<br />
-                  <a href="{% url 'django_contact_form' %}">Feedback</a>
+                  Truyện đọc từ phải sang trái.<br>
+                  Manga read from right to left.<br>
                 </div>
               </article>
             </li>
             <li>
-              Truyện bị thiếu trang/lỗi?
+              Truyện không convert được? You can not convert a volume?
               <article class="message is-success">
                 <div class="message-body">
                   Vui lòng truy cập vào link gốc của truyện, vì rất có thể
                   truyện đó đã bị die các link ảnh nên chúng tôi không thể
-                  convert được.
+                  convert được vì thiếu chap. <br>
+                  You can access the original link of the manga, maybe some chapter is missing or 
+                  the image source is dead, so we can not convert it because
+                  of the missing chapters.
                 </div>
               </article>
             </li>
