--- a/manga_web/templates/manga/paginate.html
+++ b/manga_web/templates/manga/paginate.html
@@ -6,7 +6,7 @@
         <nav class="pagination is-centered" role="navigation" aria-label="pagination">
           {% if page_obj.has_previous %}
           <a href="?{% url_replace page=page_obj.previous_page_number %}" class="pagination-previous"
-          hx-trigger="click" hx-get="{% url_replace page=page_obj.previous_page_number %}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
+          hx-trigger="click" hx-get="?{% url_replace page=page_obj.previous_page_number %}" hx-target="#body" hx-swap="innerHTML" hx-push-url="true"
           >Previous</a>
           {% else %}
           <a class="pagination-previous" disabled>Previous</a>
