--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -23,6 +23,8 @@
 
     <meta name="google-site-verification" content="VmB77WCg22eY7jvwBB2V4QzfSvkfimcatgukxvddGmc" />
     <meta name="referrer" content="origin" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7702794870294339"
+     crossorigin="anonymous"></script>
 
     <!-- Open Graph data -->
     <meta property="og:title" content="{% block meta_title %}{% endblock %}" />
